Update azure-pipeline.yml for Azure Pipelines

--- a/automation/azure-pipeline.yml
+++ b/automation/azure-pipeline.yml
@@ -3,17 +3,27 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+name: $(Date:yyyyMMdd)$(Rev:.r)
 trigger:
 - main
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+stages:
+- stage: Build
+  jobs:
+  - job: One
+    steps:
+    - task: HelmDeploy@0
+      displayName: helm build
+      inputs:
+        connectionType: 'Kubernetes Service Connection'
+        kubernetesServiceConnection: $(cluster_name)
+        namespace: $(bpa_ns)
+        command: 'install'
+        chartType: 'FilePath'
+        chartPath: '../my-app/'
+        releaseName: $(bpa-rel)
+        valueFile: '../my-app/values.yaml'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
