--- a/automation/azure-pipeline.yml
+++ b/automation/azure-pipeline.yml
@@ -5,7 +5,9 @@
 
 name: $(Date:yyyyMMdd)$(Rev:.r)
 trigger:
-- main
+  branches:
+    include:
+      - development
 
 pool:
   vmImage: ubuntu-latest
