--- a/automation/helm_install_nginx.yml
+++ b/automation/helm_install_nginx.yml
@@ -13,7 +13,7 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-- stage: Install
+- stage: DockerBuild
   jobs:
   - job: One
     steps:
@@ -27,8 +27,16 @@ stages:
         Dockerfile: 'microservices/mysql/Dockerfile.mysql'
         tags: '$(imageName)-5.7'
 #        tags: '$(Build.SourceBranchName)-$(Build.BuildId)'
+    - bash: |
+        echo "This is the Job Docker Build"
+        echo "##vso[task.setvariable variable=doThing;isOutput=true]Yes" #set variable doThing to Yes
+- stage: helmdeploy
+  dependsOn: One
+  condition: eq(dependencies.One.outputs['DetermineResult.doThing'], 'Yes') #map doThing and check the value
+  jobs:
   - job: two
     steps:
+    - script: echo "Docker Build was successful, hence deploying helm"
     - task: HelmDeploy@0
       displayName: helm build
       inputs:
