Update helm_install_nginx.yml for Azure Pipelines

--- a/automation/helm_install_nginx.yml
+++ b/automation/helm_install_nginx.yml
@@ -22,7 +22,8 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'docker_acr'
-        repository: '$(imageName)'
+        repository: mysql
+#        repository: '$(imageName)'
         command: 'buildAndPush'
         Dockerfile: 'microservices/mysql/Dockerfile.mysql'
         tags: '$(imageName)-5.7'
