Update helm_install_nginx.yml for Azure Pipelines

--- a/automation/helm_install_nginx.yml
+++ b/automation/helm_install_nginx.yml
@@ -26,7 +26,8 @@ stages:
 #        repository: '$(imageName)'
         command: 'buildAndPush'
         Dockerfile: 'microservices/mysql/Dockerfile.mysql'
-        tags: '$(imageName)-5.7'
+        tags: 'mysql-5.7'
+#        tags: '$(imageName)-5.7'
 #        tags: '$(Build.SourceBranchName)-$(Build.BuildId)'
     - bash: |
         echo "This is the Job Docker Build"
