--- a/automation/helm_install_nginx.yml
+++ b/automation/helm_install_nginx.yml
@@ -29,15 +29,17 @@ stages:
         tags: 'mysql-5.7'
 #        tags: '$(imageName)-5.7'
 #        tags: '$(Build.SourceBranchName)-$(Build.BuildId)'
-    - bash: |
-        echo "This is the Job Docker Build"
-        echo "##vso[task.setvariable variable=doThing;isOutput=true]Yes" #set variable doThing to Yes
+#    - bash: |
+#        echo "This is the Job Docker Build"
+#        echo "##vso[task.setvariable variable=doThing;isOutput=true]Yes" #set variable doThing to Yes
 - stage: helmdeploy
   dependsOn: DockerBuild
-  condition: eq(dependencies.One.outputs['DetermineResult.doThing'], 'Yes') #map doThing and check the value
+#  condition: eq(dependencies.One.outputs['DetermineResult.doThing'], 'Yes') #map doThing and check the value
   jobs:
   - job: two
     steps:
+    - checkout: self
+      clean: true
     - script: echo "Docker Build was successful, hence deploying helm"
     - task: HelmDeploy@0
       displayName: helm build
