--- a/my-app/charts/mysql/templates/deployment.yaml
+++ b/my-app/charts/mysql/templates/deployment.yaml
@@ -138,6 +138,8 @@ spec:
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
           successThreshold: {{ .Values.readinessProbe.successThreshold }}
           failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+        args:
+            - "--ignore-db-dir=lost+found"
         volumeMounts:
         - name: data
           mountPath: /var/lib/mysql
