--- a/my-app/charts/mysql/templates/deployment.yaml
+++ b/my-app/charts/mysql/templates/deployment.yaml
@@ -33,21 +33,16 @@ spec:
 {{ toYaml . | indent 8 }}
 {{- end }}
     spec:
-      {{- if .Values.schedulerName }}
-      schedulerName: "{{ .Values.schedulerName }}"
-      {{- end }}
-      {{- if .Values.imagePullSecrets }}
+      
+      {{- if .Values.global.registry }}
       imagePullSecrets:
-{{ toYaml .Values.imagePullSecrets | indent 8 }}
+        - name: {{ template "bpa.fullname" . }}-dcr
       {{- end }}
-      {{- if .Values.priorityClassName }}
-      priorityClassName: "{{ .Values.priorityClassName }}"
-      {{- end }}
-      {{- if .Values.securityContext.enabled }}
-      securityContext:
-        fsGroup: {{ .Values.securityContext.fsGroup }}
-        runAsUser: {{ .Values.securityContext.runAsUser }}
-      {{- end }}
+#      {{- if .Values.imagePullSecrets }}
+#      imagePullSecrets:
+#{{ toYaml .Values.imagePullSecrets | indent 8 }}
+#      {{- end }}
+      
       serviceAccountName: {{ template "mysql.serviceAccountName" . }}
       containers:
       - name: {{ template "mysql.fullname" . }}
