--- a/automation/helm_install_nginx.yml
+++ b/automation/helm_install_nginx.yml
@@ -12,6 +12,10 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+- name: images
+  value: [mysql]
+
 stages:
 - stage: DockerBuild
   jobs:
@@ -19,19 +23,10 @@ stages:
     steps:
     - checkout: self
       clean: true
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'docker_acr'
-        repository: mysql
-#        repository: '$(imageName)'
-        command: 'buildAndPush'
-        Dockerfile: 'microservices/mysql/Dockerfile.mysql'
-        tags: 'mysql-5.7'
-#        tags: '$(imageName)-5.7'
-#        tags: '$(Build.SourceBranchName)-$(Build.BuildId)'
-#    - bash: |
-#        echo "This is the Job Docker Build"
-#        echo "##vso[task.setvariable variable=doThing;isOutput=true]Yes" #set variable doThing to Yes
+    - template: create_docker_images.yml
+      parameters:
+        images: ${{ variables.images }}
+    
 - stage: helmdeploy
   dependsOn: DockerBuild
 #  condition: eq(dependencies.One.outputs['DetermineResult.doThing'], 'Yes') #map doThing and check the value
@@ -52,4 +47,5 @@ stages:
         chartPath: 'my-app/'
         releaseName: $(bpa-rel)
         valueFile: 'my-app/values.yaml'
+        arguments: '--set mysql.imageTag = $(Build.SourceBranchName)-$(Build.BuildId)'
 
