--- a/automation/helm_install_nginx.yml
+++ b/automation/helm_install_nginx.yml
@@ -12,9 +12,6 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-variables:
-- name: images
-  value: mysql
 
 stages:
 - stage: DockerBuild
@@ -25,7 +22,7 @@ stages:
       clean: true
     - template: create_docker_images.yml
       parameters:
-        images: ${{ variables.images }}
+        images: ["mysql"]
     
 - stage: helmdeploy
   dependsOn: DockerBuild
