--- a/my-app/charts/mysql/templates/svc.yaml
+++ b/my-app/charts/mysql/templates/svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "mysql.fullname" . }}
+  name: {{ .Values.mysql.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "mysql.fullname" . }}
