--- a/microservices/voting/Dockerfile.voting
+++ b/microservices/voting/Dockerfile.voting
@@ -2,7 +2,7 @@ FROM python:3.6
 
 WORKDIR /usr/src/app
 
-COPY microservices/voting/static microservices/voting/templates microservices/voting/requirements.txt microservices/voting/main.py microservices/voting/config_file.cfg  ./
+COPY ../static/ ../templates/ ../requirements.txt ../main.py ../config_file.cfg  ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 CMD [ "python", "./main.py" ]
