--- a/my-app/templates/voting.yaml
+++ b/my-app/templates/voting.yaml
@@ -1,23 +1,27 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ Values.voting.name }}
+  name: {{ .Values.voting.name }}
   labels:
-    app: {{ Values.voting.name }}
+    app: {{ .Values.voting.name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: voting
+      app.kubernetes.io/part-of: voting
   template:
     metadata:
       labels:
-        app: {{ Values.voting.name }}
+        app: {{ .Values.voting.name }}
         release: {{ .Release.Name }}
     spec:
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        - name: voting
+          image: {{ template "imageRegistryUrl" . }}/{{ .Values.voting.image }}:{{ .Values.voting.imageTag }}
           imagePullPolicy: {{ .Values.voting.imagePullPolicy }}
           env:
           - name: PORT
@@ -42,9 +46,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ Values.voting.name }}
+  name: {{ .Values.voting.name }}
   labels:
-    app: {{ Values.voting.name }}
+    app: {{ .Values.voting.name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -55,6 +59,6 @@ spec:
       protocol: TCP
       name: {{ .Values.voting.name }}
   selector:
-    app: {{ Values.voting.name }}
+    app: {{ .Values.voting.name }}
     release: {{ .Release.Name }}
 
