--- a/my-app/values.yaml
+++ b/my-app/values.yaml
@@ -33,7 +33,7 @@ ingress_controller:
   external: false
   service:
     create: true
-    externalIPs: []
+    externalIPs: [10.240.0.10]
     httpPort:
       enable: false
       nodePort: 30100
