--- a/microservices/voting/config_file.cfg
+++ b/microservices/voting/config_file.cfg
@@ -2,7 +2,7 @@
 MYSQL_DATABASE_USER = 'votinguser'
 MYSQL_DATABASE_PASSWORD = 'WeLcOmE123'
 MYSQL_DATABASE_DB = 'azurevote'
-MYSQL_DATABASE_HOST = 'bpa-rel-mysql'
+MYSQL_DATABASE_HOST = 'mysql'
 
 # UI Configurations
 TITLE = 'Azure Voting App'
