--- a/my-app/values.yaml
+++ b/my-app/values.yaml
@@ -33,7 +33,8 @@ ingress_controller:
   external: false
   service:
     create: true
-    externalIPs: [10.240.0.10]
+#    externalIPs: [10.240.0.10]
+    externalIPs: [40.71.238.9]
     httpPort:
       enable: false
       nodePort: 30100
@@ -44,7 +45,7 @@ ingress_controller:
       nodePort: 30101
       port: 443
       targetPort: 443
-    loadBalancerIP: '40.71.238.9'
+    loadBalancerIP: ''
     loadBalancerSourceRanges: []
     name: ingress-nginx
     type: LoadBalancer
