--- a/microservices/voting/config_file.cfg
+++ b/microservices/voting/config_file.cfg
@@ -1,7 +1,7 @@
 # MySql Configuration
 MYSQL_DATABASE_USER = 'votinguser'
 MYSQL_DATABASE_PASSWORD = 'WeLcOmE123'
-MYSQL_DATABASE_DB = 'azurevote'
+MYSQL_DATABASE_DB = 'votingdb'
 MYSQL_DATABASE_HOST = 'mysql'
 
 # UI Configurations
