--- a/microservices/voting/config_file.cfg
+++ b/microservices/voting/config_file.cfg
@@ -6,6 +6,6 @@ MYSQL_DATABASE_HOST = 'mysql'
 
 # UI Configurations
 TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Cats'
-VOTE2VALUE = 'Dogs'
+VOTE1VALUE = 'CNF'
+VOTE2VALUE = 'VNF'
 SHOWHOST = 'false'
